bat.bool1.nearhundred.NearHundred.scala.error
Compilation error:
NearHundred:5: error: not found: value ||
  if (b<=10) || (a<=10){
             ^