bat.bool1.nearhundred.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  var a=n-200
  var b= n-100
  
  if (b<=10) || (a<=10){
    return(true)
    
  }else{
    return(false)
  }
}